# dotmotif

./: .gitignore  .pylintrc  CHANGELOG.md  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: python-package.yml
docs/: Automorphisms.md  Language Spec.md  Language-Spec.md  Manuscript.draft.md  README.md  Troubleshooting-Neo4jExecutor.md  abusing-dotmotif.md  attributes.md  cycle.motif  exp  grant-rough-text.tex.frag  installation.md  motif.iro  running-with-neo4j.md  start.md  usage.md
docs/examples/: Counting Triangles in MICrONS v185.py  README.md  Searching in neuPrint.py
docs/graphics/: grant-fig-syntax.html
docs/reference/dotmotif/: dotmotif.md  utils.py.md
docs/reference/executors/: GrandIsoExecutor.py.md  Neo4jExecutor.py.md  NetworkXExecutor.py.md  (+1 more)
dotmotif/: __init__.py  test_dm_flags.py  test_dm_illegal_operators.py  test_utils.py  utils.py
dotmotif/executors/: Executor.py  GrandIsoExecutor.py  NEUPRINT_JSON.py  Neo4jExecutor.py  NetworkXExecutor.py  NeuPrintExecutor.py  __init__.py  test_dm_cypher.py  test_grandisoexecutor.py  test_neo4jexecutor.py  test_networkxexecutor.py  test_neuprintexecutor.py
dotmotif/ingest/: __init__.py  test_ingest.py
dotmotif/parsers/: __init__.py
dotmotif/tests/: test_dm_flags.py  test_multigraphs.py  test_utils.py
dotmotif/validators/: __init__.py  test_dm_illegal_operators.py
tests/: test_cypher.py  test_dm_cypher.py  test_dm_flags.py  test_dm_illegal_operators.py  test_dm_parse.py  test_illegal_operators.py  test_parse.py
(+7 files in other folders)
