[project]
name = "dotmotif"
version = "0.16.0"
description = "Find graph motifs using simple, intuitive notation."
authors = [{ name = "Jordan Matelsky", email = "jordan.matelsky@jhuapl.edu" }]
requires-python = ">=3.9"
dependencies = [
    "grandiso>=2.1.1",
    "lark>=1.3.1",
    "networkx>=3.1",
    "neuprint-python>=0.4.25",
    "numpy>=1.24.3",
    "pandas>=2.0.1",
    "py2neo>=2021.2.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
